After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 702221 - Uninitialized values in the PDF extractor:
Uninitialized values in the PDF extractor:
Status: RESOLVED FIXED
Product: tracker
Classification: Core
Component: Extractor
git master
Other Linux
: Normal normal
: ---
Assigned To: tracker-extractor
Depends on:
Blocks:
 
 
Reported: 2013-06-14 08:56 UTC by Aleksander Morgado
Modified: 2013-10-03 13:49 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch. (1.21 KB, patch)
2013-06-14 08:57 UTC, Aleksander Morgado
committed Details | Review

Description Aleksander Morgado 2013-06-14 08:56:25 UTC
I got a warning regarding possibly uninitialized values in the PDF extractor:

tracker-extract-pdf.c: In function 'extract_content_parent_process.isra.1':
tracker-extract-pdf.c:397:38: warning: 'bytes_remaining' may be used uninitialized in this function [-Wmaybe-uninitialized]
     bytes_read = g_input_stream_read (G_INPUT_STREAM (datain_stream),
                                      ^
tracker-extract-pdf.c:363:10: note: 'bytes_remaining' was declared here
    gsize bytes_remaining;
          ^
Comment 1 Aleksander Morgado 2013-06-14 08:57:29 UTC
Created attachment 246785 [details] [review]
Patch.
Comment 2 Martyn Russell 2013-06-26 12:05:34 UTC
Comment on attachment 246785 [details] [review]
Patch.

Looks good Aleksander, please commit!
Comment 3 Martyn Russell 2013-10-03 13:49:46 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.